--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-hook-form": "^7.59.0",
     "react-router-dom": "^7.6.3",
     "styled-components": "^6.1.19",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
