--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.59.0",
     "react-router-dom": "^7.6.3",
+    "recharts": "^3.1.0",
     "styled-components": "^6.1.19",
     "yup": "^1.6.1",
     "zod": "^4.0.5"
