--- a/package.json
+++ b/package.json
@@ -16,18 +16,22 @@
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "@mui/styled-engine-sc": "^7.2.0",
+    "file-saver": "^2.0.5",
     "firebase": "^11.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.59.0",
     "react-router-dom": "^7.6.3",
+    "react-spinners": "^0.17.0",
     "recharts": "^3.1.0",
     "styled-components": "^6.1.19",
+    "xlsx": "^0.18.5",
     "yup": "^1.6.1",
     "zod": "^4.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "@types/file-saver": "^2.0.7",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react-swc": "^3.10.2",
