--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/styled-engine-sc": "^7.2.0",
     "file-saver": "^2.0.5",
     "firebase": "^11.10.0",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.59.0",
